Added messages to let the user know what is going on.

--- a/index.html
+++ b/index.html
@@ -344,8 +344,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
 
+			<div id="alert-position"></div>
+			
+			<div class="row">
+				
 				<div class="col">
 					<!-- Statistic table -->
 					<div class="card">
